--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,3 +14,9 @@ jobs:
     steps:
       - run: echo "CI completed"
       - run: echo "CD completed"
+      - uses: RGCsAGupta/gh-actions-trigger-test-2@v1
+        with:
+          app-name: test-app
+          app-version: 1.0.0
+          git-user: ${{ secrets.GH_AUTOMATION_USER }}
+          git-pat: ${{ secrets.GH_PAT }}
