--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,6 +12,7 @@ jobs:
   cd:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - run: echo "CI completed"
       - run: echo "CD completed"
       - uses: RGCsAGupta/gh-actions-trigger-test-2@v1
